--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <string name="tank_list_label">Tank List Fragment</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">0</string>
@@ -11,4 +12,5 @@
     <string name="search_button_text">Search</string>
     <string name="add_button_text">Add tank</string>
     <string name="count_button_text">Count</string>
+    <string name="tank_list_header_text">World of Tanks</string>
 </resources>
