--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="add_button_text">Add tank</string>
     <string name="count_button_text">Count</string>
     <string name="tank_list_header_text">World of Tanks</string>
+    <string name="modify_tank_button_text">Modify</string>
+    <string name="delete_tank_button_text">Delete</string>
 </resources>
