--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="tank_list_label">Tank List Fragment</string>
+    <string name="tank_details_label">Tank Details Fragment</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">0</string>
